# my-lightbox

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
data/: test.txt
data/webserver/: webserver.txt
main/: CMakeLists.txt  Kconfig.projbuild  lvgl_demo_ui.c  lvgl_demo_ui.h  main.c  main.h  nvs.c  storage.c  webserver.c  webserver.h  wifi.c  wifi.h
main/images/: kh.c
wifi-manager/: code.js  index.html
